
2.5.5
  b - change so gpus get written back to nodes file
  e - make it so that even if an array request has multiple consecutive '%' the slot 
      limit will be set correctly
  e - change so blcr checkpoint jobs can restart on different node. Use
      configure --enable-blcr to allow.
  b - remove the use of a GNU specific function, and fix an error for solaris builds

2.5.4
  f - added the ability to track gpus. Users set gpus=X in the nodes file for
      relevant node, and then request gpus in the nodes request: 
      -l nodes=X[:ppn=Y][:gpus=Z]. The gpus appear in $PBS_GPUFILE, a new 
      environment variable, in the form: <hostname>-gpu<index> and in a 
      new job attribute exec_gpus: 
      <hostname>-gpu/<index>[+<hostname>-gpu/<index>...]
  b - clean up job mom checkpoint directory on checkpoint failure
  e - Bugzilla bug 91. Check the status before the service is actually started.
      (Steve Traylen - CERN)
  e - Bugzilla bug 89. Only touch lock/subsys files if service actually starts.
      (Steve Traylen - CERN)
  c - when using job_force_cancel_time, fix a crash in rare cases
  e - add server parameter moab_array_compatible. When set to true, this parameter
      places a limit hold on jobs past the slot limit. Once one of the unheld jobs 
      completes or is deleted, one of the held jobs is freed.
  b - fix a potential memory corruption for walltime remaining for jobs
      (Vikentsi Lapa)
  b - fix potential buffer overrun in pbs_sched (Bugzilla #98, patch from 
      Stephen Usher @ University of Oxford)
  e - check if a process still exists before killing it and sleeping. This speeds up
      the time for killing a task exponentially, although this will show mostly for
      SMP/NUMA systems, but it will help everywhere.
      (Dr. Bernd Kallies)
  b - Fix for reque failures on mom.  Forked pbs_mom would silently segfault and
      job was left in Exiting state.