@@ -86,6 +86,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
   e - change so blcr checkpoint jobs can restart on different node. Use
       configure --enable-blcr to allow.
   b - remove the use of a GNU specific function, and fix an error for solaris builds
+  b - remove the $PBS_GPUFILE when job is done on mom
 
 2.5.4
   f - added the ability to track gpus. Users set gpus=X in the nodes file for
